Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,8 @@
     }
    ],
    "source": [
-    "friends. #Put the cursor to the right of the dot (.) and press tab to see all of the available methods"
+    "friends.\n",
+    "#Put the cursor to the right of the dot (.) and press tab to see all of the available methods\n"
    ]
   },
   {
